# java-occ-swig

./: .gitignore  CMakeLists.txt  README.md  generate.sh
generator/src/: Modules.py  generate_wrapper.py  wrapper_generator.conf
src/common/: CommonIncludes.i  OccHandle.i
src/headers/: BOPAlgo_module.hxx
src/include/: install.sh
src/include/opencascade/: AIS.hxx  AIS_AngleDimension.hxx  AIS_Animation.hxx  AIS_AnimationCamera.hxx  AIS_AnimationObject.hxx  AIS_AnimationTimer.hxx  AIS_AttributeFilter.hxx  AIS_AttributeFilter.lxx  AIS_Axis.hxx  AIS_BadEdgeFilter.hxx  AIS_C0RegularityFilter.hxx  AIS_CameraFrustum.hxx  AIS_Chamf2dDimension.hxx  AIS_Chamf2dDimension.lxx  AIS_Chamf3dDimension.hxx  AIS_Chamf3dDimension.lxx  AIS_Circle.hxx  AIS_ClearMode.hxx  AIS_ColorScale.hxx  AIS_ColoredDrawer.hxx  AIS_ColoredShape.hxx  AIS_ConcentricRelation.hxx  AIS_ConnectStatus.hxx  AIS_ConnectedInteractive.hxx  AIS_DataMapIteratorOfDataMapOfIOStatus.hxx  AIS_DataMapIteratorOfDataMapOfSelStat.hxx  AIS_DataMapIteratorOfDataMapofIntegerListOfinteractive.hxx  AIS_DataMapOfIOStatus.hxx  AIS_DataMapOfSelStat.hxx  AIS_DataMapOfShapeDrawer.hxx  AIS_DataMapofIntegerListOfinteractive.hxx  AIS_DiameterDimension.hxx  AIS_Dimension.hxx  AIS_DimensionOwner.hxx  AIS_DimensionSelectionMode.hxx  AIS_DisplayMode.hxx  AIS_DisplaySpecialSymbol.hxx  AIS_DisplayStatus.hxx  AIS_DragAction.hxx  AIS_EllipseRadiusDimension.hxx  (+8263 more)
src/swig/common/: CommonIncludes.i  OccHandle.i  Operators.i
src/swig/wrapper/: Adaptor2d.i  Adaptor3d.i  AdvApp2Var.i  AdvApprox.i  BRepAlgoAPI.i  BVH.i  Message.i  NCollection.i  Prs3d.i  SWIGTYPE_p_Standard_Failure.java  SWIGTYPE_p_opencascade__handleT_Message_Alert_t.java  SWIGTYPE_p_opencascade__handleT_TopoDS_TShape_t.java  Standard.i  TopAbs.i  TopLoc.i  TopoDS.i  TopoDSJNI.java  TopoDS_AlertWithShape.java  TopoDS_Builder.java  TopoDS_CompSolid.java  TopoDS_Compound.java  TopoDS_Edge.java  TopoDS_Face.java  TopoDS_HShape.java  TopoDS_Iterator.java  TopoDS_Shape.java  TopoDS_Shell.java  TopoDS_Solid.java  TopoDS_TCompSolid.java  TopoDS_TCompound.java  TopoDS_TEdge.java  TopoDS_TFace.java  TopoDS_TShape.java  TopoDS_TShell.java  TopoDS_TSolid.java  TopoDS_TVertex.java  TopoDS_TWire.java  TopoDS_Vertex.java  TopoDS_Wire.java  TopoDS_wrap.cxx  (+2 more)
src/wrapper/: BOPAlgo.i
